<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="@dimen/bottom_sheet_margin">

    <!-- Bottom sheet title  -->
    <TextView
        style="@style/bottom_sheet_title_style"
        android:text="@string/add_lenses_to_stock">
    </TextView>

    <!-- Expiration date select  -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_date_selector_style"
        android:id="@+id/stockLensesExpDateField"
        android:hint="@string/exp_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stockLensesExpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Wear cycle select -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_wear_cycle_selector_style"
        android:id="@+id/stockLensesWearCycle"
        android:hint="@string/wear_cycle" >

        <AutoCompleteTextView
            android:id="@+id/autoComplete_stockLenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name input  -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_name_selector_style"
        android:id="@+id/stockLensesNameField"
        android:hint="@string/name" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stockLensesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add button -->
    <com.google.android.material.button.MaterialButton
        style="@style/bottom_sheet_add_button_style"
        android:id="@+id/stockLensesSaveButton"
        android:text="@string/add" />

</LinearLayout>