<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="@dimen/bottom_sheet_margin">

    <!-- Bottom sheet title  -->
    <TextView
        style="@style/bottom_sheet_title_style"
        android:text="@string/start_new_solution">
    </TextView>

    <!-- Date selects  -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Start date select  -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/bottom_sheet_date_selector_style"
            android:hint="@string/start_date"
            android:layout_marginEnd="10dp"
            android:layout_width="150dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/solutionStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Expiration date select  -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/bottom_sheet_date_selector_style"
            android:hint="@string/exp_date"
            android:layout_marginStart="10dp"
            android:layout_width="150dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/solutionExpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:clickable="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Name input  -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_name_selector_style"
        android:hint="@string/name" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/solutionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add button -->
    <com.google.android.material.button.MaterialButton
        style="@style/bottom_sheet_add_button_style"
        android:id="@+id/solutionSaveButton"
        android:text="@string/add" />

</LinearLayout>