<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="@dimen/bottom_sheet_margin">

    <!-- Bottom sheet title  -->
    <TextView
        style="@style/bottom_sheet_title_style"
        android:text="@string/start_new_container">
    </TextView>

    <!-- Start date select  -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_date_selector_style"
        android:id="@+id/containerStartDateField"
        android:hint="@string/start_date">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/containerStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name input  -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/bottom_sheet_name_selector_style"
        android:id="@+id/containerNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/containerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add button -->
    <com.google.android.material.button.MaterialButton
        style="@style/bottom_sheet_add_button_style"
        android:id="@+id/containerSaveButton"
        android:text="@string/add" />

</LinearLayout>